--- a/package.json
+++ b/package.json
@@ -20,25 +20,37 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "------------------Image vulnerabilities scan------------------": "",
     "scan:app": "docker scout cves",
-    "scan:db": "docker scout cves postgres:latest"
+    "scan:db": "docker scout cves postgres:latest",
+    "-------------------------DB controls--------------------------": "",
+    "typeorm": "ts-node ./node_modules/typeorm/cli -d src/db/data-source.ts",
+    "migration:run": "npm run typeorm migration:run",
+    "migration:generate": "npm run typeorm migration:generate src/db/migrations/Migration",
+    "migration:create": "npm run typeorm migration:create",
+    "migration:revert": "npm run typeorm migration:revert"
   },
   "dependencies": {
     "@nestjs/common": "^10.3.5",
+    "@nestjs/config": "^3.2.0",
     "@nestjs/core": "^10.3.5",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "^1.0.1",
     "@nestjs/platform-express": "^10.3.5",
     "@nestjs/swagger": "^7.3.0",
+    "@nestjs/typeorm": "^10.0.2",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.0.1",
     "http-status-codes": "^2.2.0",
+    "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "swagger-ui-express": "^5.0.0",
+    "typeorm": "^0.3.20",
+    "typeorm-extension": "^3.5.0",
     "uuid": "^8.3.2",
     "yaml": "^2.4.1"
   },
