Update remote image. Fixes in db connection.

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,9 @@ TOKEN_REFRESH_EXPIRE_TIME=24h
 # PostgreSQL DB
 DB_PORT=5433
 DB_HOST=localhost
+DB_HOST_DOCKER=host.docker.internal
 DB_USER=postgres
 DB_PASSWORD=postgres
 DB_NAME=home-library-service-db
+TZ=GMT+3
+PGTZ=GMT+3
