--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,9 @@ JWT_SECRET_REFRESH_KEY=secret123123
 TOKEN_EXPIRE_TIME=1h
 TOKEN_REFRESH_EXPIRE_TIME=24h
 
+MAX_LOG_SIZE_KB=10
+LOG_LEVEL=2
+
 # PostgreSQL DB
 DB_PORT=5433
 DB_HOST=localhost
